# test-bare-metal-pico

./: CMakeLists.txt  README.md  blink_led.c  hello_world.c
